Расширяю ugc сервис добавляю брокер сообщений

--- a/.env.example
+++ b/.env.example
@@ -88,6 +88,8 @@ KAFKA_COMMENT_TOPIC=user_metric_comment_event
 KAFKA_WATCH_PROGRESS_TOPIC=user_metric_watch_progress_event
 KAFKA_WATCH_LIST_TOPIC=user_metric_add_to_watch_list_event
 KAFKA_OTHER_TOPIC=user_metric_other_event
+KAFKA_REC_BOOKMARKS_LIST_TOPIC=rec_bookmarks_list_topic
+KAFKA_REC_RATINGS_FILMS_TOPIC=rec_user_ratings_films_topic
 
 #RABBITMQ
 RABBITMQ_USER=user
