--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "types-ujson (>=5.10.0.20250326,<6.0.0.0)",
     "backoff (==2.2.1)",
     "sentry-sdk (==2.30.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "aiokafka (==0.12.0)"
 
 ]
 
