--- a/services/nl-consumer/src/pyproject.toml
+++ b/services/nl-consumer/src/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "numpy (>=2.3.1,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "orjson (>=3.11.0,<4.0.0)",
+    "backoff (>=2.2.1,<3.0.0)",
 ]
 
 [tool.poetry]
