--- a/services/embedding-etl/src/pyproject.toml
+++ b/services/embedding-etl/src/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "elasticsearch[async]>=8.13.2,<9.0.0",
     "redis>=5.0.4,<6.0.0",
     "celery>=5.5.3",
-    "debugpy>=1.8.13,<2.0.0"
+    "debugpy>=1.8.13,<2.0.0",
+    "numpy (>=2.3.1,<3.0.0)",
+    "backoff (==2.2.1)"
 ]
 
 [project.optional-dependencies]
