--- a/services/async-api/src/pyproject.toml
+++ b/services/async-api/src/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "redis>=5.0.4,<6.0.0",
     "pydantic-settings>=2.8.1,<3.0.0",
     "gunicorn>=23.0.0,<24.0.0",
-    "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0"
+    "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 [tool.poetry]
