--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,7 +159,7 @@ services:
         condition: service_completed_successfully
     cpus: "1"
     mem_limit: 256M
-    expose:
+    ports:
       - "8008:8000"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/async/openapi"]
