Изменяю переменные окружения

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=pg_db
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=111000111postgres
 
 ##KIBANA
 KIBANA_PORT=5601
@@ -67,7 +67,7 @@ LOGIN_PATH=/auth/api/v1/sessions/login
 
 ##CLICKHOUSE
 CLICKHOUSE_HOST=clickhouse-node1
-CLICKHOUSE_PASSWORD=1234
+CLICKHOUSE_PASSWORD=n^wsfau04!
 CLICKHOUSE_USER=default
 
 #KAFKA
@@ -181,6 +181,9 @@ LLM_HOST=ollama
 LLM_PORT=11434
 LLM_MODEL=llama3
 
+
+REC_PROFILE_SUPPLIER_HOST=recs-profile
+REC_PROFILE_SUPPLIER_PORT=8000
 
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
