--- a/.env.example
+++ b/.env.example
@@ -124,8 +124,8 @@ MONGODB_REVIEWS_LIKE_COLL=reviewslikeCollection
 
 GLITCHTTIP_POSTGRES_DB=postgres
 GLITCHTTIP_POSTGRES_NAME=postgres
-GLITCHTTIP_POSTGRES_PASSWORD=postgres
-GLITCHTTIP_URL_DB=postgres://postgres:postgres@glitchtip-postgres:5432/postgres
+GLITCHTTIP_POSTGRES_PASSWORD=111000111postgres
+GLITCHTTIP_URL_DB=postgres://postgres:111000111postgres@glitchtip-postgres:5432/postgres
 GLITCHTIP_URL_REDIS=redis://glitchtip-redis:6379/0
 GLITCHTIP_SECRET_KEY=XoCtZEnDObD9_SQRZ885hJg2wVOBuQcKM_d8NHzjPNEc5tDUCyaFDTkj1ufkQy4us2s
 GLITCHTIP_URL_DOMAIN=http://localhost:8005
@@ -217,7 +217,7 @@ TEST_POSTGRES__HOST=postgres
 # TEST_POSTGRES__HOST=localhost
 TEST_POSTGRES__PORT=5432
 TEST_POSTGRES__USER=postgres
-TEST_POSTGRES__PASSWORD=postgres
+TEST_POSTGRES__PASSWORD=111000111postgres
 TEST_POSTGRES__DB=pg_db
 
 # API (APIConf)
