Исправляю падение тестов

--- a/.env.example
+++ b/.env.example
@@ -67,7 +67,7 @@ LOGIN_PATH=/auth/api/v1/sessions/login
 
 ##CLICKHOUSE
 CLICKHOUSE_HOST=clickhouse-node1
-CLICKHOUSE_PASSWORD=n^wsfau04!
+CLICKHOUSE_PASSWORD=nwsfau04
 CLICKHOUSE_USER=default
 
 #KAFKA
