--- a/libs/auth_utils/pyproject.toml
+++ b/libs/auth_utils/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "auth_utils"
-version = "0.1.0"
+version = "0.1.1"
 description = "Библиотека для авторизации пользователей в сервисах"
 readme = "README.md"
 requires-python = ">=3.12,<4.0"
@@ -11,11 +11,11 @@ dependencies = [
     "dotenv>=0.9.9,<1.0.0",
     "pydantic-settings>=2.9.1,<3.0.0",
     "redis>=5.3.0,<6.0.0",
-    "backoff>=2.2.1,<3.0.0"
+    "backoff>=2.2.1,<3.0.0",
 ]
 
 [tool.poetry]
-packages = [{include = "auth_utils"}]
+packages = [{ include = "auth_utils" }]
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
