--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -325,6 +325,31 @@ services:
       - "9411:9411"       # порт совместимости с Zipkin
     restart: always
 
+  embedding-service:
+    platform: linux/amd64
+    container_name: embedding-service
+    profiles: ["embedding-service-test"]
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: services/embedding-service/src/Dockerfile
+    environment:
+      - HF_HUB_TIMEOUT=600
+    expose:
+      - "8007:8000"
+    restart: "always"
+
+  tests-embedding-service:
+    build:
+      context: .
+      dockerfile: ./services/embedding-service/tests/functional/Dockerfile
+    profiles: ["embedding-service-test"]
+    container_name: tests-embedding-service-container
+    env_file:
+      - ./.env
+
+
 volumes:
   test_redis_data:
   test_elasticsearch_data:
