Интегрирую в async-api сервис statistic

--- a/.env.example
+++ b/.env.example
@@ -185,6 +185,9 @@ LLM_MODEL=llama3
 REC_PROFILE_SUPPLIER_HOST=recs-profile
 REC_PROFILE_SUPPLIER_PORT=8000
 
+STISTIC_SUPPLIER_HOST=statistic-service
+STISTIC_SUPPLIER_PORT=8000
+
 #------------------------------------------------------------------------------
 # ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
 
