--- a/services/embedding-service/tests/functional/pyproject.toml
+++ b/services/embedding-service/tests/functional/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "pytest-asyncio>=0.26.0,<1.0.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pydantic>=2.11.3,<3.0.0",
-    "pydantic-settings>=2.9.1,<3.0.0"
+    "pydantic-settings>=2.9.1,<3.0.0",
+    "numpy (>=2.3.1,<3.0.0)"
 ]
 
 [tool.poetry]
