Добавляю в Makefile и CI pipeline прогон тестов, фикшу Warning.

--- a/.env.example
+++ b/.env.example
@@ -237,3 +237,7 @@ TEST_CONTENTAPI__PORT=8000
 TEST_NGINX_PORT=80
 ##APP DOCKER
 TEST_RUN_PORTS=8000
+
+#  TEST EMBEDDING API (embedding-service)
+TEST_EMBEDDING_API_HOST=embedding-service
+TEST_EMBEDDING_API_PORT=8000
