--- a/.env.example
+++ b/.env.example
@@ -237,3 +237,7 @@ TEST_CONTENTAPI__PORT=8000
 TEST_NGINX_PORT=80
 ##APP DOCKER
 TEST_RUN_PORTS=8000
+
+# RecsProfile
+TEST_RECS_API__HOST=recs-profile
+TEST_RECS_API__PORT=8000
