--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -7,13 +7,15 @@ include:
   - ./infra/rabbit/docker-compose.rabbit.yml
   - ./services/metric-service/docker-compose.metric-services.yml
   - ./services/event-generator/docker-compose.event-generator.yml
+  - ./services/nl-consumer/src/docker-compose.llm.yml
+
 
 
 services:
   elasticsearch:
     image: elasticsearch:8.16.5
     container_name: elasticsearch-container
-    profiles: ["async-api-test"]
+    profiles: ["","async-api-test"]
     env_file:
       - ./.env
     volumes:
@@ -39,7 +41,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: redis-container
-    profiles: ["async-api-test", "auth-api-test", "content-api-test"]
+    profiles: ["","async-api-test", "auth-api-test", "content-api-test"]
     env_file:
       - ./.env
     environment:
@@ -77,7 +79,7 @@ services:
     build:
       context: .
       dockerfile: ./services/async-api/src/Dockerfile
-    profiles: ["async-api-test"]
+    profiles: ["","async-api-test"]
     container_name: async-api-container
     env_file:
       - ./.env
@@ -86,14 +88,21 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      es-init:
+        condition: service_completed_successfully
     ports:
       - ${TEST_RUN_PORTS}:${TEST_RUN_PORTS}
-    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/async/openapi"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: "always"
 
   postgres:
     image: postgres:17-alpine
     container_name: postgres-container
-    profiles: ["async-api-test", "auth-api-test", "content-api-test"]
+    profiles: ["","async-api-test", "auth-api-test", "content-api-test"]
     env_file:
       - ./.env
     environment:
@@ -115,7 +124,7 @@ services:
     build:
       context: .
       dockerfile: ./backup/postgres_dump-auth/Dockerfile
-    profiles: ["content-api-test"]
+    profiles: ["","content-api-test"]
     environment:
       - PG_HOST=${POSTGRES_HOST}
       - PG_PORT=${POSTGRES_PORT}
@@ -132,7 +141,7 @@ services:
     build:
       context: .
       dockerfile: ./services/auth-service/src/Dockerfile
-    profiles: ["auth-api-test", "async-api-test", "content-api-test"]
+    profiles: ["","auth-api-test", "async-api-test", "content-api-test"]
     container_name: auth-api-container
     cpus: "0.5"
     mem_limit: 256M
@@ -157,7 +166,7 @@ services:
     build:
       context: .
       dockerfile: ./services/content-actions-service/src/Dockerfile
-    profiles: ["content-api-test"]
+    profiles: ["","content-api-test"]
     container_name: content-actions-api-container
     env_file:
       - ./.env
@@ -182,6 +191,62 @@ services:
       start_period: 30s
     restart: always
 
+  es-init:
+    container_name: es-init-container
+    build:
+      context: .
+      dockerfile: backup/elastic_dump/dump_loader/Dockerfile
+    environment:
+      - ELASTIC_HOST=${ELASTIC_HOST}
+      - ELASTIC_PORT=${ELASTIC_PORT}
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    restart: "no"
+
+  embedding-service:
+    platform: linux/amd64
+    container_name: embedding-service
+    env_file:
+      - .env
+    build:
+      context: .
+      dockerfile: services/embedding-service/src/Dockerfile
+    environment:
+      - HF_HUB_TIMEOUT=600
+    expose:
+      - "8007:8000"
+    restart: "always"
+
+  recs-profile:
+    container_name: recs-profile
+    build:
+      dockerfile: ./services/recs-profile/src/Dockerfile
+    # profiles: ["recs-profile-test"]
+    env_file:
+      - .env
+    depends_on:
+      content-actions-api:
+        condition: service_healthy
+      kafka-init:
+        condition: service_completed_successfully
+      async-api:
+        condition: service_healthy
+      embedding-service:
+        condition: service_started
+      pg-import:
+        condition: service_completed_successfully
+      notification:
+        condition: service_healthy
+    ports:
+      - "8005:8000"
+    healthcheck:
+      test: ["CMD", "curl", "http://localhost:8000/nl/openapi"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: always
+
   tests-content-api:
     build:
       context: .
@@ -201,6 +266,21 @@ services:
         condition: service_healthy
       content-actions-api:
         condition: service_healthy
+
+  tests-recs-profile:
+    build:
+      context: .
+      dockerfile: ./services/recs-profile/tests/Dockerfile
+    # profiles: ["recs-profile-test"]
+    container_name: tests-recs-profile
+    cpus: "0.5"
+    mem_limit: 256M
+    env_file:
+      - ./.env
+    depends_on:
+      recs-profile:
+        condition: service_healthy
+
 
   tests-async-api:
     build:
@@ -256,7 +336,7 @@ services:
     build:
       context: .
       dockerfile: services/notification-service/src/Dockerfile
-    profiles: ["auth-api-test", "content-api-test"]
+    profiles: ["","auth-api-test", "content-api-test"]
     depends_on:
       postgres:
         condition: service_healthy
