--- a/services/recs-profile/tests/pyproject.toml
+++ b/services/recs-profile/tests/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "numpy (>=2.3.1,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
 ]
 
 [tool.poetry]
