Модифицирую хелсчек ES

--- a/docker-compose-tests.yml
+++ b/docker-compose-tests.yml
@@ -31,12 +31,12 @@ services:
       - ${TEST_ELASTIC__PORT}:${TEST_ELASTIC__PORT}
     expose:
       - ${TEST_ELASTIC__PORT}
-    restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 20
+    restart: "always"
 
   redis:
     image: redis:7-alpine
