--- a/infra/kafka/docker-compose.kafka.yaml
+++ b/infra/kafka/docker-compose.kafka.yaml
@@ -2,7 +2,7 @@ services:
   kafka-0:
     container_name: kafka-0
     image: bitnami/kafka:3.4
-    profiles: ["recs-profile-test", "metrics-api-test", "production"]
+    profiles: ["","recs-profile-test", "metrics-api-test", "production"]
     ports:
       - "9094:9094"
     volumes:
@@ -29,7 +29,7 @@ services:
   kafka-1:
     container_name: kafka-1
     image: bitnami/kafka:3.4
-    profiles: ["recs-profile-test", "metrics-api-test", "production"]
+    profiles: ["","recs-profile-test", "metrics-api-test", "production"]
     ports:
       - "9095:9095"
     volumes:
@@ -56,7 +56,7 @@ services:
   kafka-2:
     container_name: kafka-2
     image: bitnami/kafka:3.4
-    profiles: ["recs-profile-test", "metrics-api-test", "production"]
+    profiles: ["","recs-profile-test", "metrics-api-test", "production"]
     ports:
       - "9096:9096"
     volumes:
@@ -82,7 +82,7 @@ services:
   kafka-init:
     container_name: kafka-init
     image: bitnami/kafka:3.4
-    profiles: ["recs-profile-test", "metrics-api-test", "production"]
+    profiles: ["","recs-profile-test", "metrics-api-test", "production"]
     env_file:
       - ../../.env
     volumes:
@@ -99,7 +99,7 @@ services:
   kafka-ui:
     container_name: kafka-ui
     image: provectuslabs/kafka-ui:v0.7.0
-    profiles: ["recs-profile-test", "metrics-api-test", "production"]
+    profiles: ["","recs-profile-test", "metrics-api-test", "production"]
     ports:
       - "8080:8080"
     environment:
